--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -117825,4 +117825,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01292351)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01300002)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
