--- a/pages/p1/960743.md
+++ b/pages/p1/960743.md
@@ -1,4 +1,4 @@
-### 中国生育率跌破警戒线 官员支招 网友怒怼(图)
+### 中国造假新闻上热搜被抓包 引网友嘲讽(组图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -6,10 +6,10 @@
 
 
 <div class="article_right" style="fone-color:#000">
- <p style="text-align:center">
-  <img alt="近日，中共民政部部长李纪恒撰文表示，中国总生育率已跌破警戒线（图片来源：微博）" src="https://img3.secretchina.com/pic/2020/12-1/p2830041a41041856-ss.jpg" style="height:337px; width:600px"/>
+ <p style="text-align: center;">
+  <img alt="示意图：武汉肺炎疫苗（图片来源：Adobe stock）" src="https://img3.secretchina.com/pic/2021/1-10/p2854522a240067012-ss.jpg" style="height:337px; width:600px"/>
   <br>
-   近日，中共民政部部长李纪恒撰文表示，中国总生育率已跌破警戒线（图片来源：微博）
+   示意图：武汉肺炎疫苗（图片来源：Adobe stock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,68 +29,64 @@
   </div>
  </div>
  <p>
-  【看中国2020年12月2日讯】（看中国记者文俪综合报导）
+  【看中国2021年1月29日讯】（看中国记者文俪综合报导）日前，一则标题为《世卫不建议接种
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/中国人口" target="_blank">
-    中国人口
+   莫德纳
+   <span href="https://www.secretchina.com/news/gb/tag/新冠疫苗" target="_blank">
+    新冠疫苗
    </span>
-   老龄化
   </strong>
-  、劳动力不足的问题已越来越严重。近日，中国民政部部长李纪恒建议，要从“
+  》的消息冲上了微博
   <strong>
-   少子老龄化
+   热搜
   </strong>
-  ”等问题入手，引导
+  ，但有细心的中国网友在查看
   <strong>
-   生育水平
+   世卫
   </strong>
-  提升。但网友怒怼说：“是不愿意生吗？是养不起！”、“养得起也不愿意生！”
+  （WHO）网站的
+  <strong>
+   原文
+  </strong>
+  后，发现该消息为国内许多官媒断章取义后的二次创。因此遭到中国网友吐槽：知道为啥要学英语了吧、这就是看原文的重要。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  综合陆媒报导，为了积极应对中国人口
-  <span href="https://www.secretchina.com/news/gb/tag/老龄化" target="_blank">
-   老龄化
+  1月27日，中国多家官媒包括环球网、观察者网和凤凰网科技等媒体以及一些地方官微账号以《世卫不建议接种
+  <span href="https://www.secretchina.com/news/gb/tag/莫德纳" target="_blank">
+   莫德纳
   </span>
-  等问题，中共民政部部长李纪恒近日在所谓的《中共中央关于制定国民经济和社会发展第十四个五年规划和二〇三五年远景目标的建议》（以下简称《建议》）辅导读本中撰写了《实施积极应对人口老龄化国家战略》一文。李纪恒在文中表示，受多方影响，我国适龄人口生育意愿偏低，总和生育率已跌破警戒线，人口发展进入关键转折期。
+  新冠疫苗》的标题在微博发文，消息一经发出便立即被送上微博热搜，引发中国网友的广泛关注及议论。
+ </p>
+ <p style="text-align: center;">
+  <img alt="中国多家官媒断章取义报导被网友抓包（图片来源：微博）" src="https://img3.secretchina.com/pic/2021/1-29/p2868711a103724786-ss.jpg" style="height:288px; width:600px"/>
+  <br>
+   中国多家官媒断章取义报导被网友抓包（图片来源：微博）
+  </br>
  </p>
  <p>
-  上述《建议》提出，实现人口均衡发展要从“
-  <span href="https://www.secretchina.com/news/gb/tag/少子" target="_blank">
-   少子
+  有部分中国网友都声称要支持国产
+  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;filedall=1&amp;q=%E7%96%AB%E8%8B%97&amp;t=1" target="_blank">
+   疫苗
   </span>
-  老龄化”等问题入手。李纪恒认为，优化生育政策，促进人口长期均衡发展，提高人口素质，是积极应对人口老龄化、持续保持社会活力的治本之策。
+  ，还是国产的安全云云。
  </p>
  <p>
-  此外，李纪恒还表示，落实《建议》要求，要制定长期规划，实施人口均衡发展国家战略。还要引导
-  <span href="https://www.secretchina.com/news/gb/search?nohard=0&amp;q=%E4%BA%8C%E8%83%8E" target="_blank">
-   生育
+  但随后有细心网友找到
+  <span href="https://www.secretchina.com/news/gb/tag/世卫" target="_blank">
+   世卫
   </span>
-  水平提升并稳定在适度区间，增加劳动力供给，实现人口与经济社会、资源环境相协调等。
+  中文官网在26日发表的原文——《世卫组织：莫德纳新冠疫苗接种后应至少观察15分钟暂不建议18岁以下人群及孕妇接种》，并非官媒断章取义所报的那样。
  </p>
  <p>
-  但在相关话题下，网友纷纷留言怒怼：“你把生育政策孤零零的提出来，还意识不到问题所在？你就是养羊，也是考虑草料和羊圈是不是充足，何况是人？”
- </p>
- <p>
-  “35岁就失业，你们解决了吗？不是劳动力不够，是就业岗位不够，哦，你说可以去当环卫工啊！韭菜盒子。”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “少生优生，幸福一生，只生一个好，郭嘉（国家）来养老。后来郭嘉（国家）又说，只生一个好，郭嘉帮养老，后来郭嘉又说了，养老不要靠政府。最后郭嘉表示这么养不过来，养老不能靠政府！”
+  对官媒这种做法，
+  <span href="https://www.secretchina.com" target="_blank">
+   中国
+  </span>
+  网友纷纷留言吐槽：“人家世卫组织英文全文是不建议18岁以下和孕妇接种，哪来的建议接种？世界卫生组织也有中文网站，真的是造谣一张嘴，辟谣跑断腿。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -105,7 +101,7 @@
   </div>
  </center>
  <p>
-  “提倡少生的时候，多生一个就搬东西拆家，现在又要多生了，成天口头讲，一点实质性的政策都没有！”
+  “就怕到最后，抹黑完所有国外的疫苗，自己的疫苗效果又不好，生产还不够快，别人都打完了，自己这边都还没打完，又没办法进口了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -120,7 +116,7 @@
   </div>
  </center>
  <p>
-  “有本事从怀孕起到孩子年满18周岁，医疗教育全部免费，每月发5000加一个孩子的补贴，我就敢生二胎，光喊口号有什么用！”
+  “真的无语，还是国内知名媒体干出来的，这样明显误导性的新闻只会让普通大众对疫苗不信任，包括国产的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -135,7 +131,7 @@
   </div>
  </center>
  <p>
-  “某裆（党）一贯德行，骗人，朝令夕改，为达目地不择手段。这不是我说的，是近代史第一外资官顾维钧说的！”
+  “这些媒体真是垃圾，再找不到更差的了、简直是欺负中国大部分网友看不懂英文！”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -150,7 +146,7 @@
   </div>
  </center>
  <p>
-  “郭嘉（国家）的诺言太多，他自己都失忆了。也配提出多生这种要求？”
+  “不要脸的媒体（你说是谁就是谁！）、观察者网宁删不改，意思很明确了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -165,7 +161,7 @@
   </div>
  </center>
  <p>
-  “是不愿意生吗？是养不起！”
+  “这几天还在加速黑辉瑞，辉瑞在以色列有效度95%倒不报道了。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -180,7 +176,11 @@
   </div>
  </center>
  <p>
-  “养得起也不愿意生。”
+  有网友讥讽说，它要正常翻译是上不了
+  <span href="https://www.secretchina.com/news/gb/tag/热搜" target="_blank">
+   热搜
+  </span>
+  的，就是要迎合排外情绪来赚流量、所谓二次创作，按需发挥、标题党，断章取义、这二三流子的媒体真的不是蠢，是坏、”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -195,7 +195,7 @@
   </div>
  </center>
  <p>
-  “养大了也是韭菜，有这钱不如自己享受算了。”
+  还有大量网友表示，论为何在中文的国度里，懂洋文能救命，看到热搜，第一反应是去看官网。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -210,7 +210,7 @@
   </div>
  </center>
  <p>
-  “要有大局意识，国家的韭菜马上就不够用了。不管你养不养，韭菜还是得补充的。”
+  更有网友嘲讽：“境外势力造的西医疫苗，造点儿假怎么了？我爱国无罪，连花清瘟牛，日常操作而已，很久之前我就总结过了：‘正能量’谣言&gt;‘负能量’事实。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,37 +225,11 @@
   </div>
  </center>
  <p>
-  “你为什么不上清华？是因为不喜欢吗？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “996我生他干嘛，给我做饭？等我回家？”
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  “请砖家放心，全面放开十胎也不会让年轻人想生的。全面提高收入、全面提高社会福利、全面抑制房价才有用！”
+  鉴于网友找出了世卫
+  <span href="https://www.secretchina.com/news/gb/tag/原文" target="_blank">
+   原文
+  </span>
+  ，凤凰网科技把标签改成了“世卫不建议孕妇接种莫德纳新冠疫苗”，而观察者网和环球网则都删除了帖文，但当时热搜榜上的错误话题仍然未变。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -273,8 +247,11 @@
   <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="fluid" data-ad-layout="in-article" data-ad-slot="3646767294" style="display:block; text-align:center;">
   </ins>
  </center>
- <p>
-  “说的真轻松，让晚生晚育，又让多生，还让女性工作，经济独立，这谁能做到？”
+ <p style="text-align: center;">
+  <img alt="微博话题未变（图片来源：微博）" src="https://img3.secretchina.com/pic/2021/1-29/p2868712a261063878-ss.jpg" style="height:781px; width:600px"/>
+  <br>
+   微博话题未变（图片来源：微博）
+  </br>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -289,7 +266,7 @@
   </div>
  </center>
  <p>
-  “每隔一个月都得发这么一段，先把996取消了再说！”
+  有网友愤怒说：“他们就这么骗吧，迟早有一天会反噬的。”
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -304,7 +281,9 @@
   </div>
  </center>
  <p>
-  “要我生我就生，要我不生我就不生，你以为你是谁啊？”
+  <strong>
+   中国官方抹黑外国疫苗已非首次
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -319,7 +298,7 @@
   </div>
  </center>
  <p>
-  “打下来，卸下来，就是不能生出来，才过去多久啊？”
+  事实上，这已经不是中国官媒第一次抹黑国外疫苗。根据“法广”（RFI）1月25日报导指，中国本来企图在各国疫苗竞争中跑在最前沿。但最终未能如愿，因此，中国的宣传机构开始散布有针对性的虚假信息，以扭曲竞争。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -334,7 +313,7 @@
   </div>
  </center>
  <p>
-  “听长辈说，那时候的死婴都堆成了山，扔街边没人管，当年的鬼子也不过如此吧？”
+  如，官媒中国国际电视台记者和主播刘欣1月16日在推特发文称，有十人在德国注射BionTech/辉瑞疫苗数天后死亡。但德媒《明镜》周刊和《焦点》周刊随即指出，经调查，死亡事件与疫苗没有关联。并指，这是中方故意扭曲事实，散布虚假消息。中方想以此显示：中国疫苗光芒四射，西方疫苗却不行。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -349,7 +328,7 @@
   </div>
  </center>
  <p>
-  “就这么说吧，我们这个郭嘉（国家）没有renquan（人权）的，不怪别人不喜欢我们，是真的没有！”
+  对于中国官方这么做的理由，多份德国媒体认为，因为中国的疫苗有效性不高，如科兴疫苗。再加上中国疫苗自身还有很多问题。但BionTech/辉瑞疫苗则超越了中国的疫苗，这也使得中国疫苗在国际竞争中处于落后地位。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -364,56 +343,7 @@
   </div>
  </center>
  <p>
-  据中共官方数据显示，中国出生人口数量已经连续数年下降。据中国统计局统计公报，2019年中国出生人口1465万人，比2018年减少58万人，人口出生率为10.48‰，比2018年下降0.46个千分点。而从历史数据看，10.48‰的人口出生率是自2000年以来的最低值。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  另据统计数字显示，中国2000年出生人口为1771万人，2002年下降到1647万人。此后，在2003年到2013年间，中国出生人口在1600万上下波动。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
-   </span>
-  </center>
+  而中方抹黑外国疫苗，就是要撑扶本国疫苗。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -426,6 +356,43 @@
     </center>
    </div>
   </center>
+  <p>
+   来源:
+   <span href="/news/gb/tag/看中国  ">
+    看中国
+   </span>
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41vr"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -443,13 +410,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954349.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954349.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/954349.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/02/954349.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/960743.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/960743.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p1/960743.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/29/960743.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p1/954349.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p1/960743.md' width='0px' height='0px'/>
