--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -117843,4 +117843,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01300251)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01300302)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
