--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -117900,4 +117900,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01301202)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01301251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
