--- a/pages/nsc412/n12721835.md
+++ b/pages/nsc412/n12721835.md
@@ -29,7 +29,7 @@
  新令下，允许最多3户、15人的户外聚会不超过2小时；体育馆、健身中心以及博物馆、美术馆、植物园等都可以50%的容量开放户外设施；K-12学校除特殊需要外，目前仍执行远程教学。
 </p>
 <p>
- 新令也公布了餐馆开放户外服务的细则，包括：顾客与员工必须始终佩戴口罩、面罩；与顾客互动限制在服务区；每张桌子不得超过6人，顾客户必须来自同一家庭，同时张贴标语牌，并口头告知顾客该规定；桌子之间至少要相聚8英尺；播放节目的电视或大屏幕必须关闭，直到另行通知。
+ 新令也公布了餐馆开放户外服务的细则，包括：顾客与员工必须始终佩戴口罩、面罩；与顾客互动限制在服务区；每张桌子不得超过6人，顾客户必须来自同一家庭，同时张贴标语牌，并口头告知顾客该规定；桌子之间至少要相距8英尺；播放节目的电视或大屏幕必须关闭，直到另行通知。
 </p>
 <p>
  据大纪元记者采访，在州长解除部分禁令的第二天，
