--- a/indexes/prog1530.md
+++ b/indexes/prog1530.md
@@ -117960,4 +117960,7 @@
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01302202)
 
 ----
+#### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md?t=01302251)
+
+----
 #### [ >>> 更早内容 <<< ](../indexes/prog1530-earlier.md)
