--- a/pages/p5/960864.md
+++ b/pages/p5/960864.md
@@ -1,4 +1,4 @@
-### 欧盟官员称即将与英国达成贸易协议 除非......
+### 加拿大2020年GDP下降5.1% 创有史以来最大降幅
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,21 +7,21 @@
 
 <div class="article_right" style="fone-color:#000">
  <p>
-  【看中国2020年12月5日讯】12月4日，一位
+  【看中国2021年1月30日讯】
   <strong>
-   <span href="https://www.secretchina.com/news/gb/tag/欧盟" target="_blank">
-    欧盟
+   <span href="https://www.secretchina.com/news/gb/tag/加拿大" target="_blank">
+    加拿大
    </span>
   </strong>
-  官员表示，即将与
+  统计局1月29日公布的初步估计显示，加拿大
   <strong>
-   英国
+   经济
   </strong>
-  达成
+  可能在2020年出现有史以来最大的萎缩，
   <strong>
-   贸易
+   GDP
   </strong>
-  协议，除非谈判在最后一刻破裂。
+  同比下降5.1%。该数据还显示，加拿大第四季度GDP折合成年率可能增长7.8%。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
@@ -40,20 +40,38 @@
   </div>
  </div>
  <p>
-  不过据《路透社》报道，一名
-  <span href="https://www.secretchina.com/news/gb/tag/英国" target="_blank">
-   英国
+  加拿大11月份经济增长0.7%，再次超出预期，分析师预期为增长0.4%。统计局说，12月
+  <span href="https://www.secretchina.com/news/gb/tag/GDP" target="_blank">
+   GDP
   </span>
-  政府消息人士表示，谈判取得突破的可能性正在下降。
+  可能增长0.3%，但经济活动仍比大流行前水平低3%。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  欧盟官员还表示，欧盟27国领导人可能在12月10-11日的峰会之后就英国退欧问题举行另一次会议。
-  <br>
-  </br>
+  11月和12月的
+  <span href="https://www.secretchina.com/news/gb/tag/经济" target="_blank">
+   经济
+  </span>
+  成长强于预期，但假日后的封锁预计将对新年的经济活动造成压力。
+ </p>
+ <div id="gtx-trans" style="position: absolute; left: 994px; top: -7.2px;">
+  <div class="gtx-trans-icon">
+  </div>
+ </div>
+ <p>
+  责任编辑:辛荷
+ </p>
+ <p>
+  本文短网址:
+  <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb41xo"/>
+  转载请注明出处，
+  <span style="color:red">
+   严禁建立镜像网站
+  </span>
+  .
  </p>
  <p style="margin-bottom:12px;">
   <hr style="border-top: 1px dashed  ;" width="100%"/>
@@ -76,30 +94,30 @@
     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
    </span>
   </center>
-  <center>
-   <div>
-    <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
-     <div id="SC-21xx">
-     </div>
-     <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
-     </ins>
-    </div>
-   </div>
-  </center>
-  <div style="padding-top:12px;">
-  </div>
  </p>
+ <center>
+  <div>
+   <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
+    <div id="SC-21xx">
+    </div>
+    <ins class="adsbygoogle" data-ad-client="ca-pub-1276641434651360" data-ad-format="auto" data-ad-slot="4301710469" data-full-width-responsive="true" style="display:block">
+    </ins>
+   </div>
+  </div>
+ </center>
+ <div style="padding-top:12px;">
+ </div>
 </div>
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954827.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954827.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/954827.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/12/05/954827.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960864.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960864.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p5/960864.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/01/30/960864.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p5/954827.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p5/960864.md' width='0px' height='0px'/>
