--- a/pages/p8/961155.md
+++ b/pages/p8/961155.md
@@ -1,4 +1,4 @@
-### 只想换工作 根治不了痛苦(图)
+### 越打越叛逆？用对“方法” 孩子更懂事(图)
 ------------------------
 
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;&nbsp;|&nbsp;&nbsp; [法轮功真相](https://github.com/begood0513/basic/blob/master/README.md)  &nbsp;&nbsp;|&nbsp;&nbsp; [手把手翻墙教程](https://github.com/gfw-breaker/guides/wiki)  &nbsp;&nbsp;|&nbsp;&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md)  
@@ -7,17 +7,9 @@
 
 <div class="article_right" style="fone-color:#000">
  <p style="text-align: center;">
-  <img alt="Kristen Zavo 生活 工作 痛苦" src="https://img3.secretchina.com/pic/2020/9-26/p2783722a860650551-ss.jpg"/>
+  <img alt="叛逆 教育 心理 暴力" src="https://img3.secretchina.com/pic/2020/7-8/p2728012a620916048-ss.jpg"/>
   <br>
-   只换
-   <strong>
-    工作
-   </strong>
-   ，根治不了
-   <strong>
-    痛苦
-   </strong>
-   。（图片来源：Adobestock）
+   越打越叛逆？用对“方法”，孩子更懂事。（图片来源：Adobestock）
    <span id="hideid" name="hideid" style="color:red;display:none;">
     <span href="https://www.secretchina.com">
     </span>
@@ -29,66 +21,51 @@
 
 ---
 
-#### 💥 [《伪火》 - 天安门自焚真相 ](http://158.247.195.190:10000/videos/blog/weihuo.html)&nbsp; |&nbsp; [“1400例”谎言揭秘  ](http://158.247.195.190:10000/videos/blog/jiexi1400.html)
-
 #### [ 🎬  翻墙必看视频（YouTube热门频道、网站代理、时事热点、历史事件 ...）](https://github.com/gfw-breaker/links/blob/master/banned.md)
+
+#### [ 💥  禁书下载（政治、经济、人权、民主自由、文革、六四 ...）](https://github.com/gfw-breaker/books/blob/master/README.md)
 
 
   </div>
  </div>
  <p>
   <strong>
-   只换
-   <span href="https://www.secretchina.com/news/gb/tag/工作" target="_blank">
-    工作
+   <span href="https://www.secretchina.com/news/gb/tag/教育" target="_blank">
+    教育
    </span>
-   ，根治不了痛苦
   </strong>
+  孩子一直是父母的难题，每个父母在孩子刚出生时，都立志要做合格的父母，但养育时才发现会面临许多头疼的问题。
   <span id="hideid" name="hideid" style="color:red;display:none;">
    <span href="https://www.secretchina.com">
    </span>
   </span>
  </p>
  <p>
-  了解走到这个地步的原因与现在的处境，会有助于你确保自己不会留在不适合自己的工作上，你的下一步也会跟你的目标保持一致。如果你只是从
-  <span href="https://www.secretchina.com/news/gb/tag/痛苦" target="_blank">
-   痛苦
-  </span>
-  的工作，换到另一份同样痛苦的工作，而且还要再次面对认识新公司、文化和工作模式这些挑战，那这无疑是雪上加霜，没有比这更糟糕的了。
+  所以孩子调皮的时候，很多父母会忍不住打孩子，看似为了孩子好，但这方式在过程中对孩子造成的伤害有多深，父母常无法意识到。
  </p>
  <p>
-  要找到解决工作不满的办法，首先要找出原因。我希望你花点时间认真思考，找出工作上让你不满、不快乐的原因，并写在你的日志或记事本，或是手机打开新的笔记、笔电上打开Word档，针对以下几点，思考一下自己的感受：
+  那么经常打骂孩子会给孩子造成哪些伤害呢？
  </p>
  <p>
   <strong>
-   ‧你实际的日常工作
+   1
+  </strong>
+  <strong>
+   、伤害孩子的
+   <span href="https://www.secretchina.com/news/gb/tag/心理" target="_blank">
+    心理
+   </span>
   </strong>
  </p>
  <p>
-  <strong>
-   ‧你的工作量（太多、太少）
-  </strong>
+  孩子常受父母打骂，会使他们内心失去安全感，对父母产生极大的阴影，不利孩子心理发展。有些孩子甚至必须用一生去治疗童年遭父母打骂的阴影，有的孩子则是因此造成心理扭曲。
  </p>
  <p>
   <strong>
-   ‧工作环境、位置、工作安排（封闭式或开放式格局、办公小间或独立办公室）
+   2
   </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
   <strong>
-   ‧跟你共事的人，以及你回报的对象
+   、以暴制暴
   </strong>
  </p>
  <center>
@@ -104,9 +81,13 @@
   </div>
  </center>
  <p>
+  若父母常用
   <strong>
-   ‧文化、政治、职业道德
+   <span href="https://www.secretchina.com/news/gb/tag/暴力" target="_blank">
+    暴力
+   </span>
   </strong>
+  对待孩子，那么孩子最终也会受到暴力影响，遇到问题往往只会采取暴力来解决。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -121,26 +102,7 @@
   </div>
  </center>
  <p>
-  <strong>
-   ‧升迁、降级的流动率，或者根本没有这种制度
-  </strong>
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  <strong>
-   ‧工时、通勤时间、出差量
-  </strong>
+  一般来说，这类孩子的情绪控制能力很低，身边也不会有什么真正的好朋友。他们由于受到童年暴力的影响，生活不快乐，对父母也将持续的怨恨。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -156,7 +118,10 @@
  </center>
  <p>
   <strong>
-   ‧上面的回答里，有多少是你的部门、公司或产业本来就有的？
+   3
+  </strong>
+  <strong>
+   、破坏亲子关系
   </strong>
  </p>
  <center>
@@ -172,7 +137,7 @@
   </div>
  </center>
  <p>
-  要是我早点回答这些问题，那么我也许会说，虽然我确实喜欢工作的某些部分（策略、企划、报告），但我却鄙视大多数日常的实况。数据输入、小型债权人谈判、无止境地编辑、修改根本没有人会看的简报。我重视生产力和效率，而且渴望有更多工作以外的时间。
+  世上的父母都爱自己的孩子，但是有些父母在打孩子时，没有考虑后果。结果就是破坏亲子关系，孩子长大后对待父母也会异常冷漠。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -187,11 +152,7 @@
   </div>
  </center>
  <p>
-  但这个产业吸引的，尽是些埋头苦干、逃避个人
-  <span href="https://www.secretchina.com/news/gb/tag/生活" target="_blank">
-   生活
-  </span>
-  的工作狂。我永远忘不了，一个刚订婚的同事告诉我，他会在凌晨五点出家门赶班机，比必要抵达的时间提前了好几个小时，只为了远离即将新婚的太太，好让自己可以有“安静”的时间工作，那一刻我才知道，我不想成为那样的人，也不想跟那样的人结婚。
+  那有什么方式能更好的教育孩子呢？
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -206,7 +167,47 @@
   </div>
  </center>
  <p>
-  在现今的文化里，这样的工作狂通常会获得现金、升迁的奖励，或只是上司或同侪的肯定。无可否认的，是长时间工作被视为荣誉与骄傲的象征。
+  <strong>
+   1
+  </strong>
+  <strong>
+   、提高自身素质
+  </strong>
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  父母是孩子的第一个老师，想教好孩子就要具备良好的个人素养，在过程中也要不断学习。有时父母总会责怪孩子不学好，这时不妨看看自己是否给孩子带来好的影响？父母只有提高自身素质，才能以身作则的教好孩子。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  <strong>
+   2
+  </strong>
+  <strong>
+   、不要强迫孩子
+  </strong>
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -225,7 +226,7 @@
   </ins>
  </center>
  <p>
-  我曾跟我的客户凯萨琳（Catherine）谈过这个问题，她是曼哈顿（Manhattan）的律师。她告诉我一段职涯早期的经历，改变了她对长时间工作的想法。
+  很多父母都喜欢强迫孩子，并且会责怪孩子不听话，但孩子为什么不听话，父母却很少想过原因。可能是因为有些父母总把自己的愿望强加到孩子身上，逼他们做自己不喜欢的事情，所以孩子才会反抗。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -240,52 +241,7 @@
   </div>
  </center>
  <p>
-  刚从法学院毕业的她，第一年就担任纽约市一间精品式法律事务所的合伙律师。她记得在六月初收到一封惊喜的邮件，里面是一本商业帐簿、来自公司负责人的一百美元钞票，还有一张感谢她在纪念日加班的纸条。当时她觉得很特别，这鼓励了她在假日或周末加班，并让她为此感到自豪。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  几年很快地过去了，这个曾经充满热情与野心的律师，因为过度的疲劳，变得疲惫不堪、愤世嫉俗，生活层面也受到了影响。她体重增加，因为压力过大服用降血压的药物。她幻想着结婚辞掉工作，但过于拥挤的行程表，让她光想到要找出时间约会，就觉得可笑。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  说这些并不是指不需要努力工作；不努力就不会有今天的你。但当它影响到你的健康和快乐的时候，就得要考量优先级了。
- </p>
- <center>
-  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
-   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
-   </div>
-  </div>
-  <div>
-   <center>
-    <div id="div-gpt-ad-1589559869784-0">
-    </div>
-   </center>
-  </div>
- </center>
- <p>
-  我们都听过临终的人最遗憾的事；有些被澳洲作家布罗妮‧韦尔（Bronnie Ware）在部落格《灵感之茶》（Inspiration and Chai）上留下难忘的记录，广受欢迎。在生命走到尽头的时候，人们不是希望自己有更多成就和赚更多钱。相反地，他们后悔花了太多时间工作，没有忠于自己，也没有让自己快乐。
+  因此要让孩子更懂事，就不要总是强迫孩子，而是应该认真的聆听，和孩子好好交流沟通，这样才是好方法。
  </p>
  <center>
   <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
@@ -301,11 +257,10 @@
  </center>
  <p>
   <strong>
-   本文整理、节录自克莉丝坦‧扎沃（Kristen J. Zavo）《
-   <span href="https://www.books.com.tw/products/0010867750">
-    我只是好好生活，工作竟然变顺了
-   </span>
-   》一书，文章仅代表作者个人立场和观点。由采实文化授权转载，欲阅读完整作品，欢迎参考原书。
+   3
+  </strong>
+  <strong>
+   、大方赞美
   </strong>
  </p>
  <center>
@@ -320,27 +275,38 @@
    </center>
   </div>
  </center>
- <p style="margin-bottom:12px;">
-  <hr style="border-top: 1px dashed  ;" width="100%"/>
-  <br/>
-  【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ：每位
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
-  <span href="/kzgd/subscribe.html" target="_blank">
-   荣誉会员
-  </span>
-  ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
-  <center>
-   <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
-    <img src="/kzgd/ad/join_membership_728x90.jpg" width="100%"/>
-   </span>
-  </center>
+ <p>
+  现在的父母对孩子要求总特别高，他们希望孩子懂事、听话、成绩好，还能陪父母解闷，同时帮忙做家事，当一个全能的孩子。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  但是身为父母，是否曾想过自己是否也如此完美呢？因此有时一味的责骂孩子，不如多赞美孩子，增强孩子的自信，对亲子关系的发展也更有利。
+ </p>
+ <center>
+  <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
+   <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
+   </div>
+  </div>
+  <div>
+   <center>
+    <div id="div-gpt-ad-1589559869784-0">
+    </div>
+   </center>
+  </div>
+ </center>
+ <p>
+  你对教育小孩是否也有自己独到的方式呢？欢迎在底下留言，与读者分享。
   <center>
    <div style="max-width: 632px;height:180px; display: none; text-align: center; margin: 0 auto; overflow: hidden;overflow-x: hidden;">
     <div id="taboola-midarticle-thumbnails" style="max-width: 632px;height:180px;overflow: hidden;overflow-x: hidden;">
@@ -353,6 +319,40 @@
     </center>
    </div>
   </center>
+  <p>
+   责任编辑:帝佐
+  </p>
+  <p>
+   本文短网址:
+   <input name="lname" onclick="javascript:this.focus();this.select();" onmouseover="javascript:this.focus();this.select();" type="text" value="http://kzg.io/gb422V"/>
+   转载请注明出处，
+   <span style="color:red">
+    严禁建立镜像网站
+   </span>
+   .
+  </p>
+  <p style="margin-bottom:12px;">
+   <hr style="border-top: 1px dashed  ;" width="100%"/>
+   <br/>
+   【诚征荣誉会员】溪流能够汇成大海，小善可以成就大爱。我们向全球华人诚意征集万名
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ：每位
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   每年只需支付一份订阅费用（$68美元/年），成为《看中国》网站的
+   <span href="/kzgd/subscribe.html" target="_blank">
+    荣誉会员
+   </span>
+   ，就可以助力我们突破审查与封锁，向至少10000位中国大陆同胞奉上独立真实的关键资讯，在危难时刻向他们发出预警，救他们于大瘟疫与其它社会危难之中。
+   <center>
+    <span href="https://account.secretchina.com/planshopcart.php?pid=2020plana&amp;carf=add&amp;code=b5">
+     <img src="/kzgd/ad/kzgad202010728.gif" width="100%"/>
+    </span>
+   </center>
+  </p>
   <center>
    <div>
     <div id="txt-mid2-t22-2017" style="display: block;margin-top:8px;max-height: 351px;  overflow: hidden;">
@@ -370,13 +370,13 @@
 
 <hr/>
 手机上长按并复制下列链接或二维码分享本文章：<br/>
-https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/947351.md <br/>
-<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/947351.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/947351.md.png'/></a> <br/>
-原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2020/09/26/947351.html
+https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/961155.md <br/>
+<a href='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/961155.md'><img src='https://github.com/gfw-breaker/banned-news3/blob/master/pages/p8/961155.md.png'/></a> <br/>
+原文地址（需翻墙访问）：https://www.secretchina.com/news/gb/2021/02/02/961155.html
 
 
 ------------------------
 #### [首页](https://github.com/gfw-breaker/banned-news3/blob/master/README.md) &nbsp;|&nbsp; [一键翻墙软件](https://github.com/gfw-breaker/nogfw/blob/master/README.md) &nbsp;| [《九评共产党》](https://github.com/gfw-breaker/9ping.md/blob/master/README.md#九评之一评共产党是什么) | [《解体党文化》](https://github.com/gfw-breaker/jtdwh.md/blob/master/README.md) | [《共产主义的终极目的》](https://github.com/gfw-breaker/gczydzjmd.md/blob/master/README.md)
 
 
-<img src='http://gfw-breaker.win/banned-news3/pages/p8/947351.md' width='0px' height='0px'/>
+<img src='http://gfw-breaker.win/banned-news3/pages/p8/961155.md' width='0px' height='0px'/>
